--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="card balance-card">
                     <div class="card-header">
                         <h3>Current Balance</h3>
-                        <i class="fas fa-dollar-sign"></i>
+                        <i class="fas fa-rupee-sign"></i>
                     </div>
                     <div class="card-amount" id="total-balance">0.00</div>
                 </div>
@@ -80,7 +80,6 @@
             <div class="transactions-container">
                 <h2>Recent Transactions</h2>
                 <div class="transactions-list" id="transactions-list">
-                    <!-- Transactions will be added here dynamically -->
                 </div>
             </div>
         </main>
